test/compile_errors/stage1/obj/comparing_against_undefined_produces_undefined_value.zig
export fn entry() void {
    if (2 == undefined) {}
}

// comparing against undefined produces undefined value
//
// tmp.zig:2:11: error: use of undefined value here causes undefined behavior
